service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: kicad-service 
spec: 
  type: NodePort
  selector:
    app: kicad
  ports:
    - nodePort: 31000
      port: 8080
      targetPort: 8051
